test/functions/deitz/compilerErrorOnSetter.good
compilerErrorOnSetter.chpl:9: error: foo() used in value context!
